minor changes to writing

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -27,7 +27,7 @@ By the end of the chapter, students will be able to:
 * Execute cross-validation in R to choose the number of neighbours.
 * Evaluate K-NN regression prediction accuracy in R using a test data set and an appropriate metric (*e.g.*, root means square prediction error).
 * In the context of K-NN regression, compare and contrast goodness of fit and prediction properties (namely RMSE vs RMSPE).
-* Describe advantages and disadvantages of the K-nearest neighbour regression approach.
+* Describe the advantages and disadvantages of the K-nearest neighbour regression approach.
 
 ## Regression 
 
@@ -49,16 +49,15 @@ numerical, and so predicting them given past data is considered a regression pro
 
 Many of the concepts from classification map over to the setting of regression. For example, 
 a regression model predicts a new observation's response variable based on the response variables
-for similar observations in the dataset of past observations; when building a regression model,
+for similar observations in the data set of past observations; when building a regression model,
 we first split the data into training and test sets, in order to ensure that we assess the performance
-of our method on observations not seen during training; and we can use cross-validation to evaluate difference
+of our method on observations not seen during training; and we can use cross-validation to evaluate different
 choices of model parameters (e.g., K in a K-nearest neighbours model). The major difference
 is that we are now predicting numerical variables instead of categorical variables.
 
 ## Exploring a labelled data set
 
-In this chapter and the next, we will study the Sacramento real estate data set.
-This data set was [originally reported in the Sacramento Bee](https://support.spatialkey.com/spatialkey-sample-csv-data/),
+In this chapter and the next, we will study the Sacramento real estate data set. This data set contains 932 real estate transactions in Sacramento, California from a five day period [originally reported in the Sacramento Bee newspaper](https://support.spatialkey.com/spatialkey-sample-csv-data/),
 but we have provided it with this repository as a stable source for the data.
 
 ```{r 07-load, message = FALSE}
@@ -79,7 +78,7 @@ is fair, or perhaps how to set the price of a new listing.
 
 The scientific question guides our initial exploration: the columns in the
 data that we are interested in are `sqft` (house size, in livable square feet)
-and `price` (house price, in US dollars (USD).  The first step is to visualize
+and `price` (house price, in US dollars (USD)).  The first step is to visualize
 the data as a scatter plot where we place the predictor/explanatory variable
 (house size) on the x-axis, and we place the target/response variable that we
 want to predict (price) on the y-axis:
