--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -3,18 +3,18 @@
 ## Overview 
 Up until this point, we have solved all of our predictive problems---both classification
 and regression---using K-nearest neighbours-based approaches. But while K-NN methods are 
-simple and flexible, in the context of regression there is another method (generally more popular in
+simple and flexible, in the context of regression, there is another method (generally more popular in
 most scientific disciplines) known as *linear regression*. This chapter provides an introduction
 to the basic concept of linear regression, shows how to use `tidymodels` to perform linear regression in R,
-and characterizes its strengths and weaknesses in comparison to K-NN regression. The focus is, as usual,
+and characterizes its strengths and weaknesses compared to K-NN regression. The focus is, as usual,
 on the case where there is a single predictor and single response variable of interest; but the chapter
-concludes with an example of how to use *multivariate linear regression* when there is more than one
+concludes with an example using *multivariate linear regression* when there is more than one
 predictor.
 
 ## Chapter learning objectives 
 By the end of the chapter, students will be able to:
 
-* Perform linear regression in R using `tidymodels` and evaluate it on a test dataset.
+* Perform linear regression in R using `tidymodels` and evaluate it on a test data set.
 * Compare and contrast predictions obtained from K-nearest neighbour regression to those obtained using simple ordinary least squares regression from the same dataset.
 * In R, overlay regression lines from `geom_smooth` on a single plot. 
 
@@ -27,26 +27,25 @@ the method gets significantly slower as the training dataset grows.
 Fortunately, there is an alternative to K-NN regression---*linear regression*---that addresses
 both of these limitations. Linear regression is also much more commonly used in practice, especially
 in scientific applications. In this first part of the chapter, we will focus on *simple* linear regression,
-which involves only one predictor variable and one response variable; later on we will consider
+which involves only one predictor variable and one response variable; later on, we will consider
 *multivariate* linear regression, which involves multiple predictor variables.
 Like K-NN regression, simple linear regression involves
 predicting a numerical response variable (like race time, house price, or height);
 but *how* it makes those predictions for a new observation is quite different from K-NN regression.
  Instead of looking at the K nearest neighbours and averaging
-over their values for a prediction, in simple linear regression all the
+over their values for a prediction, in simple linear regression, all the
 training data points are used to create a straight line of best fit, and then
 the line is used to "look up" the prediction. 
 
 > **Note:** although we did not cover it explicitly in the classification chapters,
 > there is another popular method for classification called *logistic regression* (ignore 
-> the word *regression* there...). After reading this chapter, if you want something like
+> the word *regression* there...). After reading this chapter, if you want a technique like
 > linear regression but for classification, consider looking up logistic regression; 
 > logistic regression and K-NN classification have a very similar advantage/disadvantage comparison
 > as linear regression and K-NN regression. See the "Additional Resources" section at the end of
 > the classification chapters to learn more about logistic regression.
 
-Let's return to the Sacramento housing data from the previous chapter to see how
-to apply linear regression and how it compares to K-NN regression. For now, we will consider 
+Let's return to the Sacramento housing data from the previous chapter to learn how to apply linear regression and compare it to K-NN regression. For now, we will consider 
 a smaller version of the housing data to help make our visualizations clear.
 Recall our predictive question: can we use the size of a house in the Sacramento, CA area to predict
 its sale price? In particular, recall that we have come across a new 2,000-square foot house we are interested
