removed sentence about data in a repository from regression

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -57,8 +57,10 @@ is that we are now predicting numerical variables instead of categorical variabl
 
 ## Exploring a labelled data set
 
-In this chapter and the next, we will study the Sacramento real estate data set. This data set contains 932 real estate transactions in Sacramento, California from a five day period [originally reported in the Sacramento Bee newspaper](https://support.spatialkey.com/spatialkey-sample-csv-data/),
-but we have provided it with this repository as a stable source for the data.
+In this chapter and the next, we will study the Sacramento real estate data
+set. This data set contains 932 real estate transactions in Sacramento,
+California from a five day 
+period [originally reported in the Sacramento Bee newspaper](https://support.spatialkey.com/spatialkey-sample-csv-data/).
 
 ```{r 07-load, message = FALSE}
 library(tidyverse)
