changed intro to reg1 to have one sentence just about regression first

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -3,9 +3,10 @@
 ## Overview 
 
 This chapter continues our foray into answering predictive questions.
-But unlike the past two chapters, which focused on predicting categorical
-variables, this chapter will focus on predicting numerical
-variables. This process---known as *regression*---has many similarities
+Here we will focus on *regression*, which is the process of predicting
+*numerical* response variables.
+This is unlike the past two chapters, which focused on predicting categorical
+variables via classification. However, regression does have many similarities
 to classification: for example, just as in the case of classification,
 we will split our data into training, validation, and test sets, we will 
 use `tidymodels` workflows, we will use a K-nearest neighbours 
