careful wording with causality in describing the scatter in reg1

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -98,7 +98,10 @@ eda
 Based on the visualization above, we can see that in Sacramento, CA, as the
 size of a house increases, so does its sale price. Thus, we can reason that we
 may be able to use the size of a not-yet-sold house (for which we don't know
-the sale price) to predict its final sale price.
+the sale price) to predict its final sale price. Note that we do not suggest here
+that a larger house size *causes* a higher sale price; just that house price
+tends to increase with house size, and that we may be able to use the latter to 
+predict the former.
 
 ## K-nearest neighbours regression
 
