improved wording of logsitic regression notebox

--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -37,15 +37,19 @@ over their values for a prediction, in simple linear regression, all the
 training data points are used to create a straight line of best fit, and then
 the line is used to "look up" the prediction. 
 
-> **Note:** although we did not cover it explicitly in the classification chapters,
-> there is another popular method for classification called *logistic regression* (ignore 
-> the word *regression* there...). After reading this chapter, if you want a technique like
-> linear regression but for classification, consider looking up logistic regression; 
-> logistic regression and K-NN classification have a very similar advantage/disadvantage comparison
-> as linear regression and K-NN regression. See the "Additional Resources" section at the end of
-> the classification chapters to learn more about logistic regression.
+> **Note:** although we did not cover it in earlier chapters, there 
+> is another popular method for classification called *logistic
+> regression* (it is used for classification even though the name, somewhat confusingly,
+> has the word "regression" in it). In logistic regression---similar to linear regression---you
+> "fit" the model to the training data and then "look up" the prediction for each new observation.
+> Logistic regression and K-NN classification have an advantage/disadvantage comparison 
+> similar to that of linear regression and K-NN
+> regression. See the "Additional Resources" section at the end of the
+> classification chapters to learn more about logistic regression.
 
-Let's return to the Sacramento housing data from the previous chapter to learn how to apply linear regression and compare it to K-NN regression. For now, we will consider 
+Let's return to the Sacramento housing data from the previous chapter to learn
+how to apply linear regression and compare it to K-NN regression. For now, we
+will consider 
 a smaller version of the housing data to help make our visualizations clear.
 Recall our predictive question: can we use the size of a house in the Sacramento, CA area to predict
 its sale price? In particular, recall that we have come across a new 2,000-square foot house we are interested
